changing button calls

--- a/android/MarketplaceSDK/src/main/res/layout/activity_sdk.xml
+++ b/android/MarketplaceSDK/src/main/res/layout/activity_sdk.xml
@@ -10,14 +10,16 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:orientation="horizontal"
-        android:layout_height="70dp">
+        android:background="@android:color/white"
+        android:layout_height="40dp">
     <Button
         android:id="@+id/botonRegresar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Regresar"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:background="@android:color/white"
         />
 
     <Button
@@ -25,9 +27,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Salida"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
         android:layout_alignParentRight="true"
+        android:background="@android:color/white"
         />
 </RelativeLayout>
 
